@@ -23,9 +23,7 @@ remove = Getopt::Long
 remove = Pod::Usage
 remove = File::Spec
 remove = File::Basename
-
-; comes with File::HomeDir
-remove = File::HomeDir::Test
+remove = File::Glob
 
 ; comes in ./inc
 remove = Test::HTTPTinyFile
