@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove dependency on File::HomeDir
 
 0.14      2017-06-05 13:55:19 -0400
   - Use v1 metacpan API (GH#9)
